--- a/user_preferences.html
+++ b/user_preferences.html
@@ -74,8 +74,12 @@
 								<li>
 									<a href="#">My Investment</a>
 									<ul>
-										<li><a href="user_product_list.html">My Current Investment</a></li>
-										<li><a href="user_product_list.html">My .. Investment</a></li>
+										<li><a href="user_product_list.html">Overview</a></li>
+										<li><a href="invest_performance.html">Performance</a></li>
+										<li><a href="invest_portfolio.html">Portfolio</a></li>
+										<li><a href="user_product_list.html">Transation</a></li>
+										<li><a href="user_product_list.html">Update</a></li>
+										<li><a href="user_product_list.html">Documents</a></li>
 									</ul>
 								</li>
 								<li class="current">
