--- a/user_product_list.html
+++ b/user_product_list.html
@@ -71,11 +71,15 @@
 									</ul>
 								</li>
 								<li><a href="#">News</a></li>
-								<li class="current">
+								<li>
 									<a href="#">My Investment</a>
 									<ul>
-										<li><a href="#">My Current Investment</a></li>
-										<li><a href="user_product_list.html">My .. Investment</a></li>
+										<li><a href="user_product_list.html">Overview</a></li>
+										<li><a href="user_product_list.html">Performance</a></li>
+										<li><a href="user_product_list.html">Portfolio</a></li>
+										<li><a href="user_product_list.html">Transation</a></li>
+										<li><a href="user_product_list.html">Update</a></li>
+										<li><a href="user_product_list.html">Documents</a></li>
 									</ul>
 								</li>
 								<li>
@@ -131,7 +135,7 @@
 				<section class="wrapper style2">
 					<div class="container">
 						<header class="major">
-							<h2>My Products</h2>
+							<h2>My Portfolio</h2>
 							<!--<p>With a much smaller subtitle hanging out just below it</p>-->
 						</header>
 					</div>
@@ -155,8 +159,8 @@
 														<th class="cell100 column8">Return</th>
 														<th class="cell100 column8">Start Date</th>
 														<th class="cell100 column8">End Date</th>
-														<th class="cell100 column8">Intro</th>
-														<th class="cell100 column8">Contract</th>
+														<!--<th class="cell100 column8">Intro</th>
+														<th class="cell100 column8">Contract</th>-->
 													</tr>
 												</thead>
 											</table>
@@ -172,12 +176,12 @@
 														<td class="cell100 column8">8.5%</td>
 														<td class="cell100 column8">01/11/2015</td>
 														<td class="cell100 column8">01/10/2020</td>
-														<td class="cell100 column8">
+														<!--<td class="cell100 column8">
 															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
 														</td>
 														<td class="cell100 column8">
 															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
-														</td>
+														</td>-->
 													</tr>
 													<tr class="row100 body">
 														<td class="cell100 column6">Houston Apartment</td>
@@ -186,12 +190,12 @@
 														<td class="cell100 column8">8%</td>
 														<td class="cell100 column8">04/10/2016</td>
 														<td class="cell100 column8">04/09/2021</td>
-														<td class="cell100 column8">
+														<!--<td class="cell100 column8">
 															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
 														</td>
 														<td class="cell100 column8">
 															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
-														</td>
+														</td>-->
 													</tr>
 													<tr class="row100 body">
 														<td class="cell100 column6">LA Apartment</td>
@@ -200,12 +204,12 @@
 														<td class="cell100 column8">8%</td>
 														<td class="cell100 column8">06/10/2017</td>
 														<td class="cell100 column8">06/09/2022</td>
-														<td class="cell100 column8">
+														<!--<td class="cell100 column8">
 															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
 														</td>
 														<td class="cell100 column8">
 															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
-														</td>
+														</td>-->
 													</tr>
 													<tr class="row100 body">
 														<td class="cell100 column6">Dallas Apartment</td>
@@ -214,12 +218,12 @@
 														<td class="cell100 column8">7.5%</td>
 														<td class="cell100 column8">09/10/2018</td>
 														<td class="cell100 column8">09/09/2023</td>
-														<td class="cell100 column8">
+														<!--<td class="cell100 column8">
 															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
 														</td>
 														<td class="cell100 column8">
 															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
-														</td>
+														</td>-->
 													</tr>
 												
 												</tbody>
