--- a/invest_portfolio.html
+++ b/invest_portfolio.html
@@ -153,12 +153,15 @@
 											<table>
 												<thead>
 													<tr class="row100 head">
-														<th class="cell100 column6">Name</th>
-														<th class="cell100 column8">Type</th>
-														<th class="cell100 column8">Amount</th>
-														<th class="cell100 column8">Return</th>
-														<th class="cell100 column8">Start Date</th>
-														<th class="cell100 column8">End Date</th>
+														<th class="cell100 column6"><font size=2>Name</font></th>
+														<th class="cell100 column8"><font size=2>Shares</font></th>
+														<th class="cell100 column8"><font size=1>Value per Share</font></th>
+														<th class="cell100 column8"><font size=2>Total Value</font></th>
+														<th class="cell100 column8"><font size=2>IRR</font></th>
+														<th class="cell100 column8"><font size=1>Equity Multiple</font></th>
+														<th class="cell100 column8"><font size=1>Anual Return</font></th>
+														<th class="cell100 column8"><font size=1>Investment Period</font></th>
+														<th class="cell100 column8"><font size=2>Signing Date</font></th>
 														<!--<th class="cell100 column8">Intro</th>
 														<th class="cell100 column8">Contract</th>-->
 													</tr>
@@ -171,11 +174,14 @@
 												<tbody>
 													<tr class="row100 body">
 														<td class="cell100 column6"><a href="product_detail_login.html">Austin Apartment</a></td>
-														<td class="cell100 column8">Value-add</td>
+														<td class="cell100 column8">10,000</td>
+														<td class="cell100 column8">$10</td>
 														<td class="cell100 column8">$100,000</td>
+														<td class="cell100 column8">16%-18%</td>
+														<td class="cell100 column8">2.5X</td>
 														<td class="cell100 column8">8.5%</td>
-														<td class="cell100 column8">01/11/2015</td>
-														<td class="cell100 column8">01/10/2020</td>
+														<td class="cell100 column8">5 Years</td>
+														<td class="cell100 column8">01/10/2015</td>
 														<!--<td class="cell100 column8">
 															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
 														</td>
@@ -185,11 +191,14 @@
 													</tr>
 													<tr class="row100 body">
 														<td class="cell100 column6">Houston Apartment</td>
-														<td class="cell100 column8">Value-add</td>
-														<td class="cell100 column8">$50,000</td>
-														<td class="cell100 column8">8%</td>
-														<td class="cell100 column8">04/10/2016</td>
-														<td class="cell100 column8">04/09/2021</td>
+														<td class="cell100 column8">10,000</td>
+														<td class="cell100 column8">$10</td>
+														<td class="cell100 column8">$100,000</td>
+														<td class="cell100 column8">16%-18%</td>
+														<td class="cell100 column8">2.5X</td>
+														<td class="cell100 column8">8.5%</td>
+														<td class="cell100 column8">5 Years</td>
+														<td class="cell100 column8">01/10/2015</td>
 														<!--<td class="cell100 column8">
 															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
 														</td>
@@ -199,11 +208,14 @@
 													</tr>
 													<tr class="row100 body">
 														<td class="cell100 column6">LA Apartment</td>
-														<td class="cell100 column8">Value-add</td>
-														<td class="cell100 column8">$75,000</td>
-														<td class="cell100 column8">8%</td>
-														<td class="cell100 column8">06/10/2017</td>
-														<td class="cell100 column8">06/09/2022</td>
+														<td class="cell100 column8">10,000</td>
+														<td class="cell100 column8">$10</td>
+														<td class="cell100 column8">$100,000</td>
+														<td class="cell100 column8">16%-18%</td>
+														<td class="cell100 column8">2.5X</td>
+														<td class="cell100 column8">8.5%</td>
+														<td class="cell100 column8">5 Years</td>
+														<td class="cell100 column8">01/10/2015</td>
 														<!--<td class="cell100 column8">
 															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
 														</td>
@@ -213,11 +225,14 @@
 													</tr>
 													<tr class="row100 body">
 														<td class="cell100 column6">Dallas Apartment</td>
-														<td class="cell100 column8">Core</td>
-														<td class="cell100 column8">$120,000</td>
-														<td class="cell100 column8">7.5%</td>
-														<td class="cell100 column8">09/10/2018</td>
-														<td class="cell100 column8">09/09/2023</td>
+														<td class="cell100 column8">10,000</td>
+														<td class="cell100 column8">$10</td>
+														<td class="cell100 column8">$100,000</td>
+														<td class="cell100 column8">16%-18%</td>
+														<td class="cell100 column8">2.5X</td>
+														<td class="cell100 column8">8.5%</td>
+														<td class="cell100 column8">5 Years</td>
+														<td class="cell100 column8">01/10/2015</td>
 														<!--<td class="cell100 column8">
 															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
 														</td>
