--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<tr class="row100 body">
 								<td class="cell100 column1"></td>
 								<td class="cell100 column2">
-									<a href="login.html" class="button small" style="margin-right:auto" onClick="window.close();">Login</a>
+									<a href="login.html" class="close" style="margin-right:auto" onClick="window.close();">Login</a>
 								</td>
 							</tr>
 						</tbody>
