--- a/invest_performance.html
+++ b/invest_performance.html
@@ -45,7 +45,7 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index_login.html" id="logo">Pro Investment</a></h1>
+						<h1><a href="product_sale_login.html" id="logo">Pro Investment</a></h1>
 						<div style="padding-left: 1000px">Hello, David.  <a href="index.html" class="button small" style="margin-right:auto">Logout</a></div>
 					<!-- Nav -->
 						<nav id="nav">
@@ -77,9 +77,9 @@
 										<li><a href="user_product_list.html">Overview</a></li>
 										<li><a href="invest_performance.html">Performance</a></li>
 										<li><a href="invest_portfolio.html">Portfolio</a></li>
-										<li><a href="user_product_list.html">Transation</a></li>
-										<li><a href="user_product_list.html">Update</a></li>
-										<li><a href="user_product_list.html">Documents</a></li>
+										<li><a href="invest_transation.html">Transation</a></li>
+										<li><a href="invest_update.html">Update</a></li>
+										<li><a href="invest_documents.html">Documents</a></li>
 									</ul>
 								</li>
 								<li>
@@ -96,10 +96,10 @@
 				</div>
 
 			<!-- Banner -->
-				<section id="banner">
+				<!--<section id="banner">
 					<header>
 						<!--<h2><em>If you already have account <a href="#" class="button">Login</a> No?<a href="http://html5up.net">Sign up</a></em></h2>-->
-					</header>
+					<!--</header>
 				</section>
 
 			<!-- Highlights 
