--- a/invest_update.html
+++ b/invest_update.html
@@ -32,6 +32,51 @@
 	<body class="is-preload">
 		<div id="page-wrapper">
 		
+		<div id="openModal" class="modalDialog">
+				<div>
+					<h2>Update</h2>
+					<div class="table100 ver1 m-b-110" style="margin-bottom:10px">
+										<div class="table100-head">
+											<table>
+												<thead>
+													<tr class="row100 head">
+														<th class="cell100 column6"><font size=2>Date</font></th>
+														<th class="cell100 column1"><font size=1>Report</font></th>
+														<!--<th class="cell100 column8">Intro</th>
+														<th class="cell100 column8">Contract</th>-->
+													</tr>
+												</thead>
+											</table>
+										</div>
+
+										<div class="table100-body js-pscroll">
+											<table>
+												<tbody>
+													<tr class="row100 body">
+														<td class="cell100 column6">04/03/2018</td>
+														<td class="cell100 column1"><a>Q1 program process report.doc</a></td>
+													</tr>
+													<tr class="row100 body">
+														<td class="cell100 column6">07/03/2018</td>
+														<td class="cell100 column1"><a>Q2 program process report.doc</a></td>
+													</tr>
+													<tr class="row100 body">
+														<td class="cell100 column6">10/03/2018</td>
+														<td class="cell100 column1"><a>Q3 program process report.doc</a></td>
+													</tr>
+													<tr class="row100 body">
+														<td class="cell100 column6"></td>
+														<td class="cell100 column1">
+															<a href="invest_update.html" class="button small" style="margin-right:auto" onClick="window.close();">Close</a>
+														</td>
+													</tr>
+												</tbody>
+											</table>
+										</div>
+									</div>
+				</div>
+			</div>
+		
 			<!-- Login -->
 			<div id="saved" class="modalDialog">
 				<div>
@@ -45,7 +90,7 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="product_sale_login.html" id="logo">Pro Investment</a></h1>
+						<h1><a href="index_login.html" id="logo">Pro Investment</a></h1>
 						<div style="padding-left: 1000px">Hello, David.  <a href="index.html" class="button small" style="margin-right:auto">Logout</a></div>
 					<!-- Nav -->
 						<nav id="nav">
@@ -99,7 +144,7 @@
 				<!--<section id="banner">
 					<header>
 						<!--<h2><em>If you already have account <a href="#" class="button">Login</a> No?<a href="http://html5up.net">Sign up</a></em></h2>-->
-					<!--</header>
+				<!--	</header>
 				</section>
 
 			<!-- Highlights 
@@ -135,7 +180,7 @@
 				<section class="wrapper style2">
 					<div class="container">
 						<header class="major">
-							<h2>My Portfolio</h2>
+							<h2>My Update</h2>
 							<!--<p>With a much smaller subtitle hanging out just below it</p>-->
 						</header>
 					</div>
@@ -155,13 +200,9 @@
 													<tr class="row100 head">
 														<th class="cell100 column6"><font size=2>Name</font></th>
 														<th class="cell100 column8"><font size=2>Shares</font></th>
-														<th class="cell100 column8"><font size=1>Value per Share</font></th>
+														<th class="cell100 column8"><font size=2>Value per Share</font></th>
 														<th class="cell100 column8"><font size=2>Total Value</font></th>
-														<th class="cell100 column8"><font size=2>IRR</font></th>
-														<th class="cell100 column8"><font size=1>Equity Multiple</font></th>
-														<th class="cell100 column8"><font size=1>Anual Return</font></th>
-														<th class="cell100 column8"><font size=1>Investment Period</font></th>
-														<th class="cell100 column8"><font size=2>Signing Date</font></th>
+														<th class="cell100 column8"><font size=2>Update</font></th>
 														<!--<th class="cell100 column8">Intro</th>
 														<th class="cell100 column8">Contract</th>-->
 													</tr>
@@ -177,11 +218,7 @@
 														<td class="cell100 column8">10,000</td>
 														<td class="cell100 column8">$10</td>
 														<td class="cell100 column8">$100,000</td>
-														<td class="cell100 column8">16%-18%</td>
-														<td class="cell100 column8">2.5X</td>
-														<td class="cell100 column8">8.5%</td>
-														<td class="cell100 column8">5 Years</td>
-														<td class="cell100 column8">01/10/2015</td>
+														<td class="cell100 column8"><a href="#openModal" class="button">Details</a></td>
 														<!--<td class="cell100 column8">
 															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
 														</td>
@@ -190,15 +227,11 @@
 														</td>-->
 													</tr>
 													<tr class="row100 body">
-														<td class="cell100 column6">Houston Apartment</td>
+														<td class="cell100 column6"><a href="product_detail_login.html">Austin Apartment</a></td>
 														<td class="cell100 column8">10,000</td>
 														<td class="cell100 column8">$10</td>
 														<td class="cell100 column8">$100,000</td>
-														<td class="cell100 column8">16%-18%</td>
-														<td class="cell100 column8">2.5X</td>
-														<td class="cell100 column8">8.5%</td>
-														<td class="cell100 column8">5 Years</td>
-														<td class="cell100 column8">01/10/2015</td>
+														<td class="cell100 column8"><a href="#openModal" class="button">Details</a></td>
 														<!--<td class="cell100 column8">
 															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
 														</td>
@@ -207,15 +240,11 @@
 														</td>-->
 													</tr>
 													<tr class="row100 body">
-														<td class="cell100 column6">LA Apartment</td>
+														<td class="cell100 column6"><a href="product_detail_login.html">Austin Apartment</a></td>
 														<td class="cell100 column8">10,000</td>
 														<td class="cell100 column8">$10</td>
 														<td class="cell100 column8">$100,000</td>
-														<td class="cell100 column8">16%-18%</td>
-														<td class="cell100 column8">2.5X</td>
-														<td class="cell100 column8">8.5%</td>
-														<td class="cell100 column8">5 Years</td>
-														<td class="cell100 column8">01/10/2015</td>
+														<td class="cell100 column8"><a href="#openModal" class="button">Details</a></td>
 														<!--<td class="cell100 column8">
 															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
 														</td>
@@ -224,15 +253,11 @@
 														</td>-->
 													</tr>
 													<tr class="row100 body">
-														<td class="cell100 column6">Dallas Apartment</td>
+														<td class="cell100 column6"><a href="product_detail_login.html">Austin Apartment</a></td>
 														<td class="cell100 column8">10,000</td>
 														<td class="cell100 column8">$10</td>
 														<td class="cell100 column8">$100,000</td>
-														<td class="cell100 column8">16%-18%</td>
-														<td class="cell100 column8">2.5X</td>
-														<td class="cell100 column8">8.5%</td>
-														<td class="cell100 column8">5 Years</td>
-														<td class="cell100 column8">01/10/2015</td>
+														<td class="cell100 column8"><a href="#openModal" class="button">Details</a></td>
 														<!--<td class="cell100 column8">
 															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
 														</td>
