--- a/product_detail.html
+++ b/product_detail.html
@@ -102,10 +102,10 @@
 				</div>
 
 			<!-- Banner -->
-				<section id="banner">
+				<!--<section id="banner">
 					<header>
 						<!--<h2><em>If you already have account <a href="#" class="button">Login</a> No?<a href="http://html5up.net">Sign up</a></em></h2>-->
-					</header>
+					<!--</header>
 				</section>
 
 			<!-- Highlights 
