--- a/product_detail_login.html
+++ b/product_detail_login.html
@@ -35,7 +35,7 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index_login.html" id="logo">Pro Investment</a></h1>
+						<h1><a href="product_sale_login.html" id="logo">Pro Investment</a></h1>
 						<div style="padding-left: 1000px">Hello, David.  <a href="index.html" class="button small" style="margin-right:auto">Logout</a></div>
 					<!-- Nav -->
 						<nav id="nav">
@@ -75,10 +75,10 @@
 				</div>
 
 			<!-- Banner -->
-				<section id="banner">
+				<!--<section id="banner">
 					<header>
 						<!--<h2><em>If you already have account <a href="#" class="button">Login</a> No?<a href="http://html5up.net">Sign up</a></em></h2>-->
-					</header>
+					<!--</header>
 				</section>
 
 			<!-- Highlights 
