--- a/user_product_list.html
+++ b/user_product_list.html
@@ -75,11 +75,11 @@
 									<a href="#">My Investment</a>
 									<ul>
 										<li><a href="user_product_list.html">Overview</a></li>
-										<li><a href="user_product_list.html">Performance</a></li>
-										<li><a href="user_product_list.html">Portfolio</a></li>
-										<li><a href="user_product_list.html">Transation</a></li>
-										<li><a href="user_product_list.html">Update</a></li>
-										<li><a href="user_product_list.html">Documents</a></li>
+										<li><a href="invest_performance.html">Performance</a></li>
+										<li><a href="invest_portfolio.html">Portfolio</a></li>
+										<li><a href="invest_transation.html">Transation</a></li>
+										<li><a href="invest_update.html">Update</a></li>
+										<li><a href="invest_documents.html">Documents</a></li>
 									</ul>
 								</li>
 								<li>
