--- a/invest_transation.html
+++ b/invest_transation.html
@@ -34,7 +34,7 @@
 		
 		<div id="openModal" class="modalDialog">
 				<div>
-					<h2>Transation</h2>
+					<h2>Transaction</h2>
 					<div class="table100 ver1 m-b-110">
 										<div class="table100-head">
 											<table>
@@ -126,7 +126,7 @@
 										<li><a href="invest_overview.html">Overview</a></li>
 										<li><a href="invest_performance.html">Performance</a></li>
 										<li><a href="invest_portfolio.html">Portfolio</a></li>
-										<li><a href="invest_transation.html">Transation</a></li>
+										<li><a href="invest_transation.html">Transaction</a></li>
 										<li><a href="invest_update.html">Update</a></li>
 										<li><a href="invest_documents.html">Documents</a></li>
 									</ul>
@@ -184,7 +184,7 @@
 				<section class="wrapper style2">
 					<div class="container">
 						<header class="major">
-							<h2>My Transation</h2>
+							<h2>My Transaction</h2>
 							<!--<p>With a much smaller subtitle hanging out just below it</p>-->
 						</header>
 					</div>
