--- a/invest_update.html
+++ b/invest_update.html
@@ -122,7 +122,7 @@
 										<li><a href="invest_overview.html">Overview</a></li>
 										<li><a href="invest_performance.html">Performance</a></li>
 										<li><a href="invest_portfolio.html">Portfolio</a></li>
-										<li><a href="invest_transation.html">Transation</a></li>
+										<li><a href="invest_transation.html">Transaction</a></li>
 										<li><a href="invest_update.html">Update</a></li>
 										<li><a href="invest_documents.html">Documents</a></li>
 									</ul>
