--- a/invest_transation.html
+++ b/invest_transation.html
@@ -222,7 +222,7 @@
 														<td class="cell100 column8">10,000</td>
 														<td class="cell100 column8">$10</td>
 														<td class="cell100 column8">$100,000</td>
-														<td class="cell100 column8"><a href="#openModal" class="button">Transation</a></td>
+														<td class="cell100 column8"><a href="#openModal" class="button">Transations</a></td>
 														<!--<td class="cell100 column8">
 															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
 														</td>
@@ -235,7 +235,7 @@
 														<td class="cell100 column8">10,000</td>
 														<td class="cell100 column8">$10</td>
 														<td class="cell100 column8">$100,000</td>
-														<td class="cell100 column8"><a href="#openModal" class="button">Transation</a></td>
+														<td class="cell100 column8"><a href="#openModal" class="button">Transations</a></td>
 														<!--<td class="cell100 column8">
 															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
 														</td>
@@ -248,7 +248,7 @@
 														<td class="cell100 column8">10,000</td>
 														<td class="cell100 column8">$10</td>
 														<td class="cell100 column8">$100,000</td>
-														<td class="cell100 column8"><a href="#openModal" class="button">Transation</a></td>
+														<td class="cell100 column8"><a href="#openModal" class="button">Transations</a></td>
 														<!--<td class="cell100 column8">
 															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
 														</td>
@@ -261,7 +261,7 @@
 														<td class="cell100 column8">10,000</td>
 														<td class="cell100 column8">$10</td>
 														<td class="cell100 column8">$100,000</td>
-														<td class="cell100 column8"><a href="#openModal" class="button">Transation</a></td>
+														<td class="cell100 column8"><a href="#openModal" class="button">Transations</a></td>
 														<!--<td class="cell100 column8">
 															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
 														</td>
