--- a/invest_transation.html
+++ b/invest_transation.html
@@ -35,7 +35,7 @@
 		<div id="openModal" class="modalDialog">
 				<div>
 					<h2>Transaction</h2>
-					<div class="table100 ver1 m-b-110">
+					<div class="table100 ver1 m-b-110" style="margin-bottom:10px">
 										<div class="table100-head">
 											<table>
 												<thead>
