--- a/invest_performance.html
+++ b/invest_performance.html
@@ -161,7 +161,7 @@
 														<th class="cell100 column8">Q1</th>
 														<th class="cell100 column8">Q2</th>
 														<th class="cell100 column8">Q3</th>
-														<th class="cell100 column8">Pqrtial Q4</th>
+														<th class="cell100 column8">Partial Q4</th>
 														<th class="cell100 column8">YTD</th>
 													</tr>
 												</thead>
