--- a/invest_documents.html
+++ b/invest_documents.html
@@ -56,7 +56,8 @@
 										<td class="cell100 column1"><a>2017K1.doc</a></td>
 									</tr>
 									<tr class="row100 body">
-										<td class="cell100 column6" colspan=2><a href="invest_documents.html" class="button small" style="margin-right:auto" onClick="window.close();">Close</a></td>
+										<td class="cell100 column6"></td>
+										<td class="cell100 column1"><a href="invest_documents.html" class="button small" style="margin-right:auto" onClick="window.close();">Close</a></td>
 									</tr>
 									
 								</tbody>
@@ -95,7 +96,8 @@
 										<td class="cell100 column1"><a>Account_Statement_Q3.doc</a></td>
 									</tr>
 									<tr class="row100 body">
-										<td class="cell100 column6" colspan=2><a href="invest_documents.html" class="button small" style="margin-right:auto" onClick="window.close();">Close</a></td>
+										<td class="cell100 column6"></td>
+										<td class="cell100 column1"><a href="invest_documents.html" class="button small" style="margin-right:auto" onClick="window.close();">Close</a></td>
 									</tr>
 									
 								</tbody>
