--- a/product_coming.html
+++ b/product_coming.html
@@ -214,7 +214,7 @@
 														<td class="cell100 column2">2.5x</td>
 													</tr>
 													<tr class="row100 body">
-														<th class="cell100 column1"><font size=2>Targeted Average Cash Yield</font></th>
+														<th class="cell100 column1"><font size=2>Annual Cash-on-Cash Return</font></th>
 														<td class="cell100 column2">4 - 6%</td>
 													</tr>
 													<tr class="row100 body">
@@ -263,7 +263,7 @@
 														<td class="cell100 column2">2.5x</td>
 													</tr>
 													<tr class="row100 body">
-														<th class="cell100 column1"><font size=2>Targeted Average Cash Yield</font></th>
+														<th class="cell100 column1"><font size=2>Annual Cash-on-Cash Return</font></th>
 														<td class="cell100 column2">4 - 6%</td>
 													</tr>
 													<tr class="row100 body">
@@ -312,7 +312,7 @@
 														<td class="cell100 column2">2.5x</td>
 													</tr>
 													<tr class="row100 body">
-														<th class="cell100 column1"><font size=2>Targeted Average Cash Yield</font></th>
+														<th class="cell100 column1"><font size=2>Annual Cash-on-Cash Return</font></th>
 														<td class="cell100 column2">4 - 6%</td>
 													</tr>
 													<tr class="row100 body">
@@ -363,7 +363,7 @@
 														<td class="cell100 column2">2.5x</td>
 													</tr>
 													<tr class="row100 body">
-														<th class="cell100 column1"><font size=2>Targeted Average Cash Yield</font></th>
+														<th class="cell100 column1"><font size=2>Annual Cash-on-Cash Return</font></th>
 														<td class="cell100 column2">4 - 6%</td>
 													</tr>
 													<tr class="row100 body">
@@ -412,7 +412,7 @@
 														<td class="cell100 column2">2.5x</td>
 													</tr>
 													<tr class="row100 body">
-														<th class="cell100 column1"><font size=2>Targeted Average Cash Yield</font></th>
+														<th class="cell100 column1"><font size=2>Annual Cash-on-Cash Return</font></th>
 														<td class="cell100 column2">4 - 6%</td>
 													</tr>
 													<tr class="row100 body">
@@ -461,7 +461,7 @@
 														<td class="cell100 column2">2.5x</td>
 													</tr>
 													<tr class="row100 body">
-														<th class="cell100 column1"><font size=2>Targeted Average Cash Yield</font></th>
+														<th class="cell100 column1"><font size=2>Annual Cash-on-Cash Return</font></th>
 														<td class="cell100 column2">4 - 6%</td>
 													</tr>
 													<tr class="row100 body">
