--- a/product_sale_login.html
+++ b/product_sale_login.html
@@ -164,7 +164,7 @@
 														<td class="cell100 column2">2.5x</td>
 													</tr>
 													<tr class="row100 body">
-														<th class="cell100 column1"><font size=2>Targeted Average Cash Yield</font></th>
+														<th class="cell100 column1"><font size=2>Annual Cash-on-Cash Return</font></th>
 														<td class="cell100 column2">4 - 6%</td>
 													</tr>
 													<tr class="row100 body">
@@ -213,7 +213,7 @@
 														<td class="cell100 column2">2.5x</td>
 													</tr>
 													<tr class="row100 body">
-														<th class="cell100 column1"><font size=2>Targeted Average Cash Yield</font></th>
+														<th class="cell100 column1"><font size=2>Annual Cash-on-Cash Return</font></th>
 														<td class="cell100 column2">4 - 6%</td>
 													</tr>
 													<tr class="row100 body">
@@ -262,7 +262,7 @@
 														<td class="cell100 column2">2.5x</td>
 													</tr>
 													<tr class="row100 body">
-														<th class="cell100 column1"><font size=2>Targeted Average Cash Yield</font></th>
+														<th class="cell100 column1"><font size=2>Annual Cash-on-Cash Return</font></th>
 														<td class="cell100 column2">4 - 6%</td>
 													</tr>
 													<tr class="row100 body">
@@ -313,7 +313,7 @@
 														<td class="cell100 column2">2.5x</td>
 													</tr>
 													<tr class="row100 body">
-														<th class="cell100 column1"><font size=2>Targeted Average Cash Yield</font></th>
+														<th class="cell100 column1"><font size=2>Annual Cash-on-Cash Return</font></th>
 														<td class="cell100 column2">4 - 6%</td>
 													</tr>
 													<tr class="row100 body">
