--- a/product_coming_login.html
+++ b/product_coming_login.html
@@ -163,7 +163,7 @@
 														<td class="cell100 column2">2.5x</td>
 													</tr>
 													<tr class="row100 body">
-														<th class="cell100 column1"><font size=2>Targeted Average Cash Yield</font></th>
+														<th class="cell100 column1"><font size=2>Annual Cash-on-Cash Return</font></th>
 														<td class="cell100 column2">4 - 6%</td>
 													</tr>
 													<tr class="row100 body">
@@ -212,7 +212,7 @@
 														<td class="cell100 column2">2.5x</td>
 													</tr>
 													<tr class="row100 body">
-														<th class="cell100 column1"><font size=2>Targeted Average Cash Yield</font></th>
+														<th class="cell100 column1"><font size=2>Annual Cash-on-Cash Return</font></th>
 														<td class="cell100 column2">4 - 6%</td>
 													</tr>
 													<tr class="row100 body">
@@ -261,7 +261,7 @@
 														<td class="cell100 column2">2.5x</td>
 													</tr>
 													<tr class="row100 body">
-														<th class="cell100 column1"><font size=2>Targeted Average Cash Yield</font></th>
+														<th class="cell100 column1"><font size=2>Annual Cash-on-Cash Return</font></th>
 														<td class="cell100 column2">4 - 6%</td>
 													</tr>
 													<tr class="row100 body">
@@ -312,7 +312,7 @@
 														<td class="cell100 column2">2.5x</td>
 													</tr>
 													<tr class="row100 body">
-														<th class="cell100 column1"><font size=2>Targeted Average Cash Yield</font></th>
+														<th class="cell100 column1"><font size=2>Annual Cash-on-Cash Return</font></th>
 														<td class="cell100 column2">4 - 6%</td>
 													</tr>
 													<tr class="row100 body">
@@ -361,7 +361,7 @@
 														<td class="cell100 column2">2.5x</td>
 													</tr>
 													<tr class="row100 body">
-														<th class="cell100 column1"><font size=2>Targeted Average Cash Yield</font></th>
+														<th class="cell100 column1"><font size=2>Annual Cash-on-Cash Return</font></th>
 														<td class="cell100 column2">4 - 6%</td>
 													</tr>
 													<tr class="row100 body">
@@ -410,7 +410,7 @@
 														<td class="cell100 column2">2.5x</td>
 													</tr>
 													<tr class="row100 body">
-														<th class="cell100 column1"><font size=2>Targeted Average Cash Yield</font></th>
+														<th class="cell100 column1"><font size=2>Annual Cash-on-Cash Return</font></th>
 														<td class="cell100 column2">4 - 6%</td>
 													</tr>
 													<tr class="row100 body">
