--- a/user_signup_access.html
+++ b/user_signup_access.html
@@ -32,31 +32,6 @@
 	<body class="is-preload">
 		<div id="page-wrapper">
 		
-			<!-- Login -->
-			<div id="openModal" class="modalDialog">
-				<div>
-					<h2>Login</h2>
-					<table>
-						<tbody>
-							<tr class="row100 body">
-								<td class="cell100 column1">Username</td>
-								<td class="cell100 column2"><input id="username"></td>
-							</tr>
-							<tr class="row100 body">
-								<td class="cell100 column1">Password</td>
-								<td class="cell100 column2"><input id="password"></td>
-							</tr>
-							<tr class="row100 body">
-								<td class="cell100 column1"></td>
-								<td class="cell100 column2">
-									<a href="product_detail_login.html" class="button small" style="margin-right:auto" onClick="window.close();">Login</a>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-			</div>
-			<!-- Login -->
 
 			<!-- Header -->
 				<div id="header">
@@ -74,29 +49,14 @@
 										<li><a href="product_sale.html">Current Offerings</a></li>										
 										<li><a href="product_off.html">Funded Offerings</a></li>
 										<li><a href="product_coming.html">Coming soon</a></li>
-										<!--<li>
-											<a href="#">Submenu</a>
-											<ul>
-												<li><a href="#">Lorem dolor</a></li>
-												<li><a href="#">Phasellus magna</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>-->
 									</ul>
 								</li>
-								<li><a href="#">News</a></li>
-								<!--<li>
-									<a href="#">Personal</a>
+								<li>
+									<a href="#">News & Updates</a>
 									<ul>
-										<li><a href="#">My Infomation</a></li>
-										<li><a href="#">My Products</a></li>
+										<li><a href="news_updates.html">News & Update</a></li>
 									</ul>
 								</li>
-								<!--<li><a href="#">Data Analysis</a></li>-->
-								
 							</ul>							
 						</nav>						
 				</div>
