--- a/invest_overview.html
+++ b/invest_overview.html
@@ -57,20 +57,14 @@
 										<li><a href="product_sale_login.html">Current Offerings</a></li>										
 										<li><a href="product_off_login.html">Funded Offerings</a></li>
 										<li><a href="product_coming_login.html">Coming soon</a></li>
-										<!--<li>
-											<a href="#">Submenu</a>
-											<ul>
-												<li><a href="#">Lorem dolor</a></li>
-												<li><a href="#">Phasellus magna</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>-->
 									</ul>
 								</li>
-								<li><a href="#">News</a></li>
+								<li>
+									<a href="#">News & Updates</a>
+									<ul>
+										<li><a href="news_updates_login.html">News & Update</a></li>
+									</ul>
+								</li>
 								<li>
 									<a href="#">My Investment</a>
 									<ul>
@@ -78,7 +72,6 @@
 										<li><a href="invest_performance.html">Performance</a></li>
 										<li><a href="invest_portfolio.html">Portfolio</a></li>
 										<li><a href="invest_transation.html">Transaction</a></li>
-										<li><a href="invest_update.html">Update</a></li>
 										<li><a href="invest_documents.html">Documents</a></li>
 									</ul>
 								</li>
@@ -155,10 +148,10 @@
 													<tr class="row100 head">
 														<th class="cell100 column6">Name</th>
 														<th class="cell100 column8">Shares</th>
+														<th class="cell100 column8">Value per Share</th>
 														<th class="cell100 column8">Total Value</th>
-														<th class="cell100 column8">Start</th>
-														<th class="cell100 column8">End</th>
-														<th class="cell100 column8">Proportion</th>
+														<th class="cell100 column8">Start Date</th>
+														<th class="cell100 column8">Annual Return</th>
 													</tr>
 												</thead>
 											</table>
@@ -170,42 +163,42 @@
 													<tr class="row100 body">
 														<td class="cell100 column6"><a href="product_detail_login.html">Austin Apartment</a></td>
 														<td class="cell100 column8">10,000</td>
+														<td class="cell100 column8">$10</td>
 														<td class="cell100 column8">$100,000</td>
 														<td class="cell100 column8">03/03/2017</td>
-														<td class="cell100 column8">03/02/2022</td>
-														<td class="cell100 column8">20%</td>
+														<td class="cell100 column8">8.5%</td>
 													</tr>
 													<tr class="row100 body">
 														<td class="cell100 column6"><a href="product_detail_login.html">Dallas Apartment</a></td>
 														<td class="cell100 column8">10,000</td>
+														<td class="cell100 column8">$10</td>
 														<td class="cell100 column8">$100,000</td>
 														<td class="cell100 column8">03/03/2017</td>
-														<td class="cell100 column8">03/02/2022</td>
-														<td class="cell100 column8">20%</td>
+														<td class="cell100 column8">7.8%</td>
 													</tr>
 													<tr class="row100 body">
 														<td class="cell100 column6"><a href="product_detail_login.html">Houston Apartment</a></td>
 														<td class="cell100 column8">10,000</td>
+														<td class="cell100 column8">$10</td>
 														<td class="cell100 column8">$100,000</td>
 														<td class="cell100 column8">03/03/2017</td>
-														<td class="cell100 column8">03/02/2022</td>
-														<td class="cell100 column8">20%</td>
+														<td class="cell100 column8">8.2%</td>
 													</tr>
 													<tr class="row100 body">
 														<td class="cell100 column6"><a href="product_detail_login.html">OKC Apartment</a></td>
 														<td class="cell100 column8">10,000</td>
+														<td class="cell100 column8">$10</td>
 														<td class="cell100 column8">$100,000</td>
 														<td class="cell100 column8">04/03/2017</td>
-														<td class="cell100 column8">04/02/2022</td>
-														<td class="cell100 column8">20%</td>
+														<td class="cell100 column8">9.1%</td>
 													</tr>
 													<tr class="row100 body">
 														<td class="cell100 column6"><a href="product_detail_login.html">SA Apartment</a></td>
 														<td class="cell100 column8">10,000</td>
+														<td class="cell100 column8">$10</td>
 														<td class="cell100 column8">$100,000</td>
 														<td class="cell100 column8">07/03/2017</td>
-														<td class="cell100 column8">07/02/2022</td>
-														<td class="cell100 column8">20%</td>
+														<td class="cell100 column8">8.3%</td>
 													</tr>
 												</tbody>
 											</table>
