--- a/invest_performance.html
+++ b/invest_performance.html
@@ -57,20 +57,14 @@
 										<li><a href="product_sale_login.html">Current Offerings</a></li>										
 										<li><a href="product_off_login.html">Funded Offerings</a></li>
 										<li><a href="product_coming_login.html">Coming soon</a></li>
-										<!--<li>
-											<a href="#">Submenu</a>
-											<ul>
-												<li><a href="#">Lorem dolor</a></li>
-												<li><a href="#">Phasellus magna</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>-->
 									</ul>
 								</li>
-								<li><a href="#">News</a></li>
+								<li>
+									<a href="#">News & Updates</a>
+									<ul>
+										<li><a href="news_updates_login.html">News & Update</a></li>
+									</ul>
+								</li>
 								<li>
 									<a href="#">My Investment</a>
 									<ul>
@@ -78,7 +72,6 @@
 										<li><a href="invest_performance.html">Performance</a></li>
 										<li><a href="invest_portfolio.html">Portfolio</a></li>
 										<li><a href="invest_transation.html">Transaction</a></li>
-										<li><a href="invest_update.html">Update</a></li>
 										<li><a href="invest_documents.html">Documents</a></li>
 									</ul>
 								</li>
@@ -212,8 +205,8 @@
 														<th class="cell100 column6">Name</th>
 														<th class="cell100 column8">2016</th>
 														<th class="cell100 column8">2017</th>
-														<th class="cell100 column8">2018 YTD</th>
-														<th class="cell100 column8">All time</th>
+														<th class="cell100 column8">2018(Annual)</th>
+														<th class="cell100 column8">Average Return</th>
 													</tr>
 												</thead>
 											</table>
