--- a/invest_portfolio.html
+++ b/invest_portfolio.html
@@ -57,20 +57,14 @@
 										<li><a href="product_sale_login.html">Current Offerings</a></li>										
 										<li><a href="product_off_login.html">Funded Offerings</a></li>
 										<li><a href="product_coming_login.html">Coming soon</a></li>
-										<!--<li>
-											<a href="#">Submenu</a>
-											<ul>
-												<li><a href="#">Lorem dolor</a></li>
-												<li><a href="#">Phasellus magna</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>-->
 									</ul>
 								</li>
-								<li><a href="#">News</a></li>
+								<li>
+									<a href="#">News & Updates</a>
+									<ul>
+										<li><a href="news_updates_login.html">News & Update</a></li>
+									</ul>
+								</li>
 								<li>
 									<a href="#">My Investment</a>
 									<ul>
@@ -78,7 +72,6 @@
 										<li><a href="invest_performance.html">Performance</a></li>
 										<li><a href="invest_portfolio.html">Portfolio</a></li>
 										<li><a href="invest_transation.html">Transaction</a></li>
-										<li><a href="invest_update.html">Update</a></li>
 										<li><a href="invest_documents.html">Documents</a></li>
 									</ul>
 								</li>
@@ -161,7 +154,7 @@
 														<th class="cell100 column8"><font size=1>Equity Multiple</font></th>
 														<th class="cell100 column8"><font size=1>Anual Return</font></th>
 														<th class="cell100 column8"><font size=1>Investment Period</font></th>
-														<th class="cell100 column8"><font size=2>Signing Date</font></th>
+														<th class="cell100 column8"><font size=2>Funding Date</font></th>
 														<!--<th class="cell100 column8">Intro</th>
 														<th class="cell100 column8">Contract</th>-->
 													</tr>
