--- a/invest_transation.html
+++ b/invest_transation.html
@@ -106,28 +106,21 @@
 										<li><a href="product_sale_login.html">Current Offerings</a></li>										
 										<li><a href="product_off_login.html">Funded Offerings</a></li>
 										<li><a href="product_coming_login.html">Coming soon</a></li>
-										<!--<li>
-											<a href="#">Submenu</a>
-											<ul>
-												<li><a href="#">Lorem dolor</a></li>
-												<li><a href="#">Phasellus magna</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>-->
 									</ul>
 								</li>
-								<li><a href="#">News</a></li>
 								<li>
+									<a href="#">News & Updates</a>
+									<ul>
+										<li><a href="news_updates_login.html">News & Update</a></li>
+									</ul>
+								</li>
+								<li class="current">
 									<a href="#">My Investment</a>
 									<ul>
 										<li><a href="invest_overview.html">Overview</a></li>
 										<li><a href="invest_performance.html">Performance</a></li>
 										<li><a href="invest_portfolio.html">Portfolio</a></li>
 										<li><a href="invest_transation.html">Transaction</a></li>
-										<li><a href="invest_update.html">Update</a></li>
 										<li><a href="invest_documents.html">Documents</a></li>
 									</ul>
 								</li>
@@ -202,13 +195,11 @@
 											<table>
 												<thead>
 													<tr class="row100 head">
-														<th class="cell100 column6"><font size=2>Name</font></th>
+														<th class="cell100 column6"><font size=2>Date</font></th>
+														<th class="cell100 column8"><font size=2>Projects</font></th>
+														<th class="cell100 column8"><font size=1>Type</font></th>
 														<th class="cell100 column8"><font size=2>Shares</font></th>
-														<th class="cell100 column8"><font size=1>Value per Share</font></th>
-														<th class="cell100 column8"><font size=2>Total Value</font></th>
 														<th class="cell100 column8"><font size=2>Transation</font></th>
-														<!--<th class="cell100 column8">Intro</th>
-														<th class="cell100 column8">Contract</th>-->
 													</tr>
 												</thead>
 											</table>
@@ -218,58 +209,47 @@
 											<table>
 												<tbody>
 													<tr class="row100 body">
-														<td class="cell100 column6"><a href="product_detail_login.html">Austin Apartment</a></td>
+														<td class="cell100 column6">11/21/2018</td>
+														<td class="cell100 column8">Austin Apartment</td>
+														<td class="cell100 column8">Distribution</td>
 														<td class="cell100 column8">10,000</td>
-														<td class="cell100 column8">$10</td>
-														<td class="cell100 column8">$100,000</td>
-														<td class="cell100 column8"><a href="#openModal" class="button">Transations</a></td>
-														<!--<td class="cell100 column8">
-															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
-														</td>
-														<td class="cell100 column8">
-															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
-														</td>-->
+														<td class="cell100 column8">$10,000</td>
 													</tr>
 													<tr class="row100 body">
-														<td class="cell100 column6"><a href="product_detail_login.html">Austin Apartment</a></td>
-														<td class="cell100 column8">10,000</td>
-														<td class="cell100 column8">$10</td>
-														<td class="cell100 column8">$100,000</td>
-														<td class="cell100 column8"><a href="#openModal" class="button">Transations</a></td>
-														<!--<td class="cell100 column8">
-															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
-														</td>
-														<td class="cell100 column8">
-															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
-														</td>-->
+														<td class="cell100 column6">11/17/2018</td>
+														<td class="cell100 column8">Dallas Apartment</td>
+														<td class="cell100 column8">Distribution</td>
+														<td class="cell100 column8">12,000</td>
+														<td class="cell100 column8">$7,000</td>
 													</tr>
 													<tr class="row100 body">
-														<td class="cell100 column6"><a href="product_detail_login.html">Austin Apartment</a></td>
+														<td class="cell100 column6">11/05/2018</td>
+														<td class="cell100 column8">Houston Apartment</td>
+														<td class="cell100 column8">Distribution</td>
 														<td class="cell100 column8">10,000</td>
-														<td class="cell100 column8">$10</td>
-														<td class="cell100 column8">$100,000</td>
-														<td class="cell100 column8"><a href="#openModal" class="button">Transations</a></td>
-														<!--<td class="cell100 column8">
-															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
-														</td>
-														<td class="cell100 column8">
-															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
-														</td>-->
+														<td class="cell100 column8">$13,000</td>
 													</tr>
 													<tr class="row100 body">
-														<td class="cell100 column6"><a href="product_detail_login.html">Austin Apartment</a></td>
-														<td class="cell100 column8">10,000</td>
-														<td class="cell100 column8">$10</td>
-														<td class="cell100 column8">$100,000</td>
-														<td class="cell100 column8"><a href="#openModal" class="button">Transations</a></td>
-														<!--<td class="cell100 column8">
-															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
-														</td>
-														<td class="cell100 column8">
-															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
-														</td>-->
+														<td class="cell100 column6">10/13/2018</td>
+														<td class="cell100 column8">Austin Apartment</td>
+														<td class="cell100 column8">Distribution</td>
+														<td class="cell100 column8">14,000</td>
+														<td class="cell100 column8">$12,000</td>
 													</tr>
-												
+													<tr class="row100 body">
+														<td class="cell100 column6">09/03/2018</td>
+														<td class="cell100 column8">Austin Apartment</td>
+														<td class="cell100 column8">Distribution</td>
+														<td class="cell100 column8">15,000</td>
+														<td class="cell100 column8">$12,000</td>
+													</tr>
+													<tr class="row100 body">
+														<td class="cell100 column6">07/23/2018</td>
+														<td class="cell100 column8">Houston Apartment</td>
+														<td class="cell100 column8">Distribution</td>
+														<td class="cell100 column8">20,000</td>
+														<td class="cell100 column8">$12,000</td>
+													</tr>
 												</tbody>
 											</table>
 										</div>
