--- a/invest_update.html
+++ b/invest_update.html
@@ -34,7 +34,7 @@
 		
 		<div id="openModal" class="modalDialog">
 				<div>
-					<h2>Update</h2>
+					<h2>Updates</h2>
 					<div class="table100 ver1 m-b-110" style="margin-bottom:10px">
 										<div class="table100-head">
 											<table>
