--- a/product_sale.html
+++ b/product_sale.html
@@ -33,65 +33,7 @@
 	<body class="is-preload">
 		<div id="page-wrapper">
 		
-			<!-- Login -->
-			<div id="openModal" class="modalDialog">
-				<div>
-					<h2>Login</h2>
-						<!--<div class="table100 ver5 m-b-110">
-
-							<div class="table100-body js-pscroll">-->
-								<table>
-									<tbody>
-										<tr class="row100 body">
-											<td class="cell100 column1">Username</td>
-											<td class="cell100 column2"><input id="username"></td>
-										</tr>
-										<tr class="row100 body">
-											<td class="cell100 column1">Password</td>
-											<td class="cell100 column2"><input id="password"></td>
-										</tr>
-										<tr class="row100 body">
-											<td class="cell100 column1"></td>
-											<td class="cell100 column2">
-												<a href="product_sale_login.html" class="button small" style="margin-right:auto" onClick="window.close();">Login</a>
-											</td>
-										</tr>
-									</tbody>
-								</table>
-						<!--	</div>
-						</div>-->
-				</div>
-			</div>
-			<!-- Login -->
 			
-			<!-- credit checking -->
-			<div id="creditCheck" class="modalDialog">
-				<div>
-					<h2>Credit Check</h2>
-					<table>
-						<tbody>
-							<tr class="row100 body">
-								<td class="cell100 column1">First Name</td>
-								<td class="cell100 column2"><input id="firstName"></td>
-							</tr>
-							<tr class="row100 body">
-								<td class="cell100 column1">Last Name</td>
-								<td class="cell100 column2"><input id="lastName"></td>
-							</tr>
-							<tr>
-								<td class="cell100 column1" colspan=2>Credit investor check</td>
-							</tr>
-							<tr class="row100 body">
-								<td class="cell100 column1"></td>
-								<td class="cell100 column2">
-									<a href="login.html" class="button small" style="margin-right:auto" onClick="window.close();">Confirm</a>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-			</div>
-			<!-- credit checking -->
 
 			<!-- Header -->
 				<div id="header">
@@ -109,29 +51,14 @@
 										<li><a href="#">Current Offerings</a></li>										
 										<li><a href="product_off.html">Funded Offerings</a></li>
 										<li><a href="product_coming.html">Coming soon</a></li>
-										<!--<li>
-											<a href="#">Submenu</a>
-											<ul>
-												<li><a href="#">Lorem dolor</a></li>
-												<li><a href="#">Phasellus magna</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>-->
 									</ul>
 								</li>
-								<li><a href="#">News</a></li>
-								<!--<li>
-									<a href="#">Personal</a>
+								<li>
+									<a href="#">News & Updates</a>
 									<ul>
-										<li><a href="#">My Infomation</a></li>
-										<li><a href="#">My Products</a></li>
+										<li><a href="news_updates.html">News & Update</a></li>
 									</ul>
 								</li>
-								<li><a href="#">Data Analysis</a></li>-->
-								
 							</ul>							
 						</nav>						
 				</div>
