--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 									</ul>
 								</li>
 								<li>
-									<a href="#">News & Updates</a>
+									<a href="#">News</a>
 									<ul>
-										<li><a href="news_updates.html">News & Update</a></li>
+										<li><a href="news_updates.html">News</a></li>
 									</ul>
 								</li>
 							</ul>							
