--- a/news_updates.html
+++ b/news_updates.html
@@ -116,9 +116,9 @@
 									</ul>
 								</li>
 								<li class="current">
-									<a href="#">News & Updates</a>
+									<a href="#">News</a>
 									<ul>
-										<li><a href="news_updates.html">News & Update</a></li>
+										<li><a href="news_updates.html">News</a></li>
 									</ul>
 								</li>
 								
@@ -133,40 +133,13 @@
 				<!--	</header>
 				</section>
 
-			<!-- Highlights 
-				<section class="wrapper style1">
-					<div class="container">
-						<div class="row gtr-200">
-							<section class="col-4 col-12-narrower">
-								<div class="box highlight">
-									<i class="icon major fa-paper-plane"></i>
-									<h3>This Is Important</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-								</div>
-							</section>
-							<section class="col-4 col-12-narrower">
-								<div class="box highlight">
-									<i class="icon major fa-pencil"></i>
-									<h3>Also Important</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-								</div>
-							</section>
-							<section class="col-4 col-12-narrower">
-								<div class="box highlight">
-									<i class="icon major fa-wrench"></i>
-									<h3>Probably Important</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-								</div>
-							</section>
-						</div>
-					</div>
-				</section>-->
+			
 
 			<!-- Gigantic Heading -->
 				<section class="wrapper style2">
 					<div class="container">
 						<header class="major">
-							<h2>News & Updates</h2>
+							<h2>News</h2>
 							<!--<p>With a much smaller subtitle hanging out just below it</p>-->
 						</header>
 					</div>
@@ -174,10 +147,10 @@
 
 			<!-- Posts -->
 				<section class="wrapper style1">
-					<div class="container" style="display:" id="newsDiv">
+					<div class="container">
 						<div class="row">
 							<section class="col-12 col-12-narrower">
-								<div class="inner">
+								<div class="inner" style="display:" id="newsDiv">
 									<h3>News</h3>
 									<div class="table100 ver1 m-b-110">
 										<div class="table100-head">
@@ -200,10 +173,28 @@
 														<td class="cell100 column8">Region, Texas</td>
 														<td class="cell100 column1"><a href="">aaaaaaaaaaaaaaaaaaaaaakkkkkkk</a></td>
 													</tr>
+													<tr class="row100 body">
+														<td class="cell100 column6">04/03/2017</td>
+														<td class="cell100 column8">Region, Texas</td>
+														<td class="cell100 column1"><a href="">bbbbbbbbbbbbbbbbbbbbb</a></td>
+													</tr>
+													<tr class="row100 body">
+														<td class="cell100 column6">01/03/2017</td>
+														<td class="cell100 column8">Region, Texas</td>
+														<td class="cell100 column1"><a href="">cccccccccccccccccccccccccc</a></td>
+													</tr>
+													<tr class="row100 body">
+														<td class="cell100 column6">10/03/2016</td>
+														<td class="cell100 column8">Region, Texas</td>
+														<td class="cell100 column1"><a href="">aaaaaaaaaaaaaaaaaaaaaakkkkkkk</a></td>
+													</tr>
 												</tbody>
 											</table>
 										</div>
 									</div>
+								</div>
+							</section>
+						</div>
 					</div>
 				</section>
 
