--- a/invest_documents.html
+++ b/invest_documents.html
@@ -225,9 +225,10 @@
 														<th class="cell100 column8"><font size=2>Shares</font></th>
 														<th class="cell100 column8"><font size=1>Value per Share</font></th>
 														<th class="cell100 column8"><font size=2>Total Value</font></th>
+														<th class="cell100 column8"><font size=2>Annual Return</font></th>
 														<th class="cell100 column8"><font size=2>Tax Documents</font></th>
 														<th class="cell100 column8"><font size=2>Account Statement</font></th>
-														<th class="cell100 column8"><font size=2>Investment Document</font></th>
+														<th class="cell100 column8"><font size=1>Investment Document</font></th>
 														<!--<th class="cell100 column8">Intro</th>
 														<th class="cell100 column8">Contract</th>-->
 													</tr>
@@ -243,9 +244,20 @@
 														<td class="cell100 column8">10,000</td>
 														<td class="cell100 column8">$10</td>
 														<td class="cell100 column8">$100,000</td>
+														<td class="cell100 column8">10.0%</td>
 														<td class="cell100 column8"><a href="#tax" class="button small">View</a></td>
 														<td class="cell100 column8"><a href="#accSta" class="button small">View</a></td>
-														<td class="cell100 column8"><a href="" class="button small">Download</a></td>
+														<td class="cell100 column8"><a href="" class="button small">View</a></td>
+													</tr>
+													<tr class="row100 body">
+														<td class="cell100 column6"><a href="product_detail_login.html">Austin Apartment</a></td>
+														<td class="cell100 column8">10,000</td>
+														<td class="cell100 column8">$10</td>
+														<td class="cell100 column8">$100,000</td>
+														<td class="cell100 column8">10.5%</td>
+														<td class="cell100 column8"><a href="#tax" class="button small">View</a></td>
+														<td class="cell100 column8"><a href="#accSta" class="button small">View</a></td>
+														<td class="cell100 column8"><a href="" class="button small">View</a></td>
 														<!--<td class="cell100 column8">
 															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
 														</td>
@@ -258,9 +270,10 @@
 														<td class="cell100 column8">10,000</td>
 														<td class="cell100 column8">$10</td>
 														<td class="cell100 column8">$100,000</td>
+														<td class="cell100 column8">9.0%</td>
 														<td class="cell100 column8"><a href="#tax" class="button small">View</a></td>
 														<td class="cell100 column8"><a href="#accSta" class="button small">View</a></td>
-														<td class="cell100 column8"><a href="" class="button small">Download</a></td>
+														<td class="cell100 column8"><a href="" class="button small">View</a></td>
 														<!--<td class="cell100 column8">
 															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
 														</td>
@@ -273,24 +286,10 @@
 														<td class="cell100 column8">10,000</td>
 														<td class="cell100 column8">$10</td>
 														<td class="cell100 column8">$100,000</td>
+														<td class="cell100 column8">7.8%</td>
 														<td class="cell100 column8"><a href="#tax" class="button small">View</a></td>
 														<td class="cell100 column8"><a href="#accSta" class="button small">View</a></td>
-														<td class="cell100 column8"><a href="" class="button small">Download</a></td>
-														<!--<td class="cell100 column8">
-															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
-														</td>
-														<td class="cell100 column8">
-															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
-														</td>-->
-													</tr>
-													<tr class="row100 body">
-														<td class="cell100 column6"><a href="product_detail_login.html">Austin Apartment</a></td>
-														<td class="cell100 column8">10,000</td>
-														<td class="cell100 column8">$10</td>
-														<td class="cell100 column8">$100,000</td>
-														<td class="cell100 column8"><a href="#tax" class="button small">View</a></td>
-														<td class="cell100 column8"><a href="#accSta" class="button small">View</a></td>
-														<td class="cell100 column8"><a href="" class="button small">Download</a></td>
+														<td class="cell100 column8"><a href="" class="button small">View</a></td>
 														<!--<td class="cell100 column8">
 															<a href="doc/x_apartment.pptx" download="x_apartment.pptx" class="button min">Download</a>
 														</td>
